More proofing and editing of SA sutras, SA 3 to SA 10.

--- a/01_agama/samyukta/11/SA11_41.md
+++ b/01_agama/samyukta/11/SA11_41.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 11. Powers | 41. The Tathāgata and the Arhat'
+title: 'The Related Discourses | 11. Powers | 41 (684). The Tathāgata and the Arhat'
 type: kramdown
 base: ../../../
 previous: ../11/index.html
@@ -9,54 +9,54 @@ next: SA11_58.html
 
 # [The Related Discourses](../index.html)
 ## [11. Powers](index.html)
-### 41. The Tathāgata and the Arhat
+### 41 (684). The Tathāgata and the Arhat
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Suppose a monk grows tired of form and parts with desire for it. It ceases completely, doesn’t arise, and he’s liberated from it. This is called the unsurpassed, correct, and complete awakening. Feeling, conception, volition, and consciousness are likewise. Suppose, again, a monk [186c] grows tired of form and parts with desire for it. It doesn’t arise, and he’s liberated from it. This is called an arhat liberated by wisdom. Feeling, conception, volition, and consciousness are likewise. Monks, what are the various differences between the Tathāgata, Arhat, and Completely Awakened One and an arhat who’s liberated by wisdom?”
+2\. It was then that the Bhagavān addressed the monks, “Suppose a monk grows tired of form and parts with desire for it. It ceases completely, doesn’t arise, and he’s liberated from it. This is called the unsurpassed, correct, and complete awakening. *Feeling, conception, volition, and consciousness are likewise.* Suppose, again, a monk grows tired of form and parts with desire for it. It doesn’t arise, and he’s liberated from it. This is called an arhat liberated by wisdom. *Feeling, conception, volition, and consciousness are likewise.* Monks, what are the various differences between the Tathāgata, Arhat, and Completely Awakened One and an arhat who’s liberated by wisdom?”
 {:#p2}
 
-3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma support. Please let him explain it. Once they hear it, the monks will accept and approve of it.”
+3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma support! Please let him explain it. Once they hear it, the monks will accept and approve of it.”
 {:#p3}
 
-4\. The Buddha told the monks, “Listen closely, and consider it well. I’ll explain this for you. Before, when the teaching had yet to be heard, the Tathāgata, Arhat, and Completely Awakened One realized and knew it himself. Knowing it himself in the present life, he attained complete awakening. He was able at a future time to explain the correct teaching that awakened his disciples, namely the four abodes of mindfulness, four right efforts, four mental abilities, five faculties, five powers, seven factors of awakening, and the eightfold path. This is called the Tathāgata, Arhat, and Completely Awakened One.
+4\. The Buddha told the monks, “Listen closely, and consider it well. I’ll explain this for you. Before the teaching had yet to be heard, the Tathāgata, Arhat, and Completely Awakened One realized and knew it himself. Knowing it himself in the present life, he attained complete awakening. He was able at a future time to explain the correct teaching that awakened his disciples, namely the four abodes of mindfulness, four right efforts, four mental abilities, five faculties, five powers, seven factors of awakening, and the eightfold path. This is called the Tathāgata, Arhat, and Completely Awakened One.
 {:#p4}
 
-5\. “He attained the teaching that had yet to be attained, managed the religious practice that had yet to be managed, and well knew the path that he well knows as the leader of this assembly. Afterward, his disciples succeed in following the teaching and the path. They are delighted and appreciate the great teacher’s instruction, teaching, and skill in the correct teaching. These are called the various differences between the Tathāgata, Arhat, and Completely Awakened One and the arhat who’s liberated by wisdom.
+5\. “He attained the teaching that had yet to be attained, managed the religious practice that had yet to be managed, and well knew the path that he knows well as the leader of this assembly. Afterward, his disciples succeeded in following the teaching and the path. They are delighted and appreciate the great teacher’s instruction, teaching, and skill in the correct Dharma. These are called the various differences between the Tathāgata, Arhat, and Completely Awakened One and the arhat who’s liberated by wisdom.
 {:#p5}
 
-6\. “Furthermore, there are five training powers and the Tathāgata’s ten powers. What are the training powers? They are the powers of faith, effort, mindfulness, concentration, and wisdom.
+6\. “Furthermore, there are five training powers and the Tathāgata’s ten powers. What are the training powers? They are the powers of faith, effort, mindfulness, samādhi, and wisdom.
 {:#p6}
 
-7\. “What are the Tathāgata’s ten powers? The Tathāgata knows what’s possible and impossible as it really is. This is called the Tathāgata’s first power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
+7\. “What are the Tathāgata’s ten powers? The Tathāgata truly knows what’s possible and impossible. This is called the Tathāgata’s first power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
 {:#p7}
 
-8\. “Furthermore, the Tathāgata knows as it really is that past, future, and present actions incur events as their result. This is called the Tathāgata’s second power. The Tathāgata, Arhat, and Completely Awakened One accomplished this power. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
+8\. “Furthermore, the Tathāgata truly knows that past, future, and present deeds incur their resulting events. This is called the Tathāgata’s second power. The Tathāgata, Arhat, and Completely Awakened One accomplished this power. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
 {:#p8}
 
-9\. “Furthermore, the Tathāgata knows as they really are the liberation of meditation, correct attainment of concentration, purification of defilements and bad [qualities], and dwelling in purity. This is called the Tathāgata’s third power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
+9\. “Furthermore, the Tathāgata truly knows the liberation of dhyāna, correct attainment of samādhi, purification of defilements and bad [qualities], and dwelling in purity. This is called the Tathāgata’s third power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
 {:#p9}
 
-10\. “Furthermore, the Tathāgata knows as they really are the various distinctions of sentient beings’ faculties. This is called the Tathāgata’s fourth power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
+10\. “Furthermore, the Tathāgata truly knows the various distinctions of sentient beings’ faculties. This is called the Tathāgata’s fourth power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
 {:#p10}
 
-11\. “Furthermore, [187a] the Tathāgata knows the various mental understandings of sentient beings as they really are. This is called the Tathāgata’s fifth power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
+11\. “Furthermore, the Tathāgata truly knows the various mental understandings of sentient beings. This is called the Tathāgata’s fifth power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
 {:#p11}
 
-12\. “Furthermore, the Tathāgata knows the various realms of worldly sentient beings as they really are. This is called the Tathāgata’s sixth power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
+12\. “Furthermore, the Tathāgata truly knows the various realms of worldly sentient beings. This is called the Tathāgata’s sixth power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
 {:#p12}
 
-13\. “Furthermore, the Tathāgata knows all the paths and the places they go as they really are. This is called the Tathāgata’s seventh power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
+13\. “Furthermore, the Tathāgata truly knows all the paths and the places where they go. This is called the Tathāgata’s seventh power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
 {:#p13}
 
-14\. “Furthermore, the Tathāgata remembers the events of his past lives: ‘From one birth to a hundred thousand births or from one eon to a hundred thousand eons, at that point there I was born to such a caste, such a clan, with such a name, and such food. Such were the pains and pleasures I felt, such was my life span, such was my duration, and such was the extent of my life. I died there in that place, was born here in this place. Dying there in that place and born here in this place, such were my actions, such were the causes, and such were the ways.’ He knows all his past lives in this way. This is called the Tathāgata’s eighth power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
+14\. “Furthermore, the Tathāgata remembers the events of his past lives: ‘From one birth to a hundred thousand births or from one eon to a hundred thousand eons, I was born there at that point to such a caste, such a clan, with such a name, and such food. Such were the pains and pleasures I felt, such was my life span, such was my duration, and such was the extent of my life. I died there in that place and was born here in this place. Dying there in that place and born here in this place, such were my deeds, such were the causes, and such were the ways.’ He knows all his past lives in this way. This is called the Tathāgata’s eighth power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
 {:#p14}
 
-15\. “Furthermore, the Tathāgata sees sentient beings as they are born and die with his heavenly eye that transcends the human eye. When they are born, they have wonderful forms, ugly forms, lower forms, and higher forms. They head for bad destinations and head for good destinations, and they experience them according to their actions. He knows as it really is: ‘This sentient being has committed bad physical actions and committed bad verbal and mental actions that are criticized by the noble ones. That being accepts the actions of wrong view. Because of these causes and conditions, it’ll fall to the bad destination of being born in hell when its life ends and its body breaks up.’ ‘This sentient being’s good physical actions and good verbal and mental actions aren’t criticized by the noble ones. It accepts the actions of right view. Because of these causes and conditions, it’ll be born in a good destination up in heaven when its life ends and its body breaks up.’ He knows all this as it really is. This is called the Tathāgata’s ninth power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
+15\. “Furthermore, the Tathāgata sees sentient beings as they are born and die with his heavenly eye that transcends the human eye. When they are born, they have wonderful forms, ugly forms, lower forms, and higher forms. They head for bad destinations and head for good destinations, and they experience them according to their deeds. He truly knows: ‘This sentient being has committed bad physical deeds and committed bad verbal and mental deeds that are criticized by the noble ones. That sentient being accepts the deeds of wrong view. Because of these causes and conditions, it’ll fall to the bad destination of being born in hell when its life ends and its body breaks up.’ ‘This sentient being’s good physical deeds and good verbal and mental deeds aren’t criticized by the noble ones. That sentient being accepts the deeds of right view. Because of these causes and conditions, they’ll be born in a good destination up in heaven when their life ends and their body breaks up.’ He truly knows all of this. This is called the Tathāgata’s ninth power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
 {:#p15}
 
-16\. “Furthermore, the Tathāgata has ended the contaminants. Without contaminants, his mind is liberated, and his wisdom is liberated. In the present life, he knows himself and has personally realized, ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know I won’t be subject to a later existence.’ This is called the Tathāgata’s tenth power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
+16\. “Furthermore, the Tathāgata has ended the contaminants. Without contaminants, his mind is liberated, and his wisdom is liberated. In the present life, he knows and has personally realized, ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know I won’t be subject to a later existence.’ This is called the Tathāgata’s tenth power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.
 {:#p16}
 
 17\. “These ten powers are only accomplished by the Tathāgata. These are called the many differences between the Tathāgata and the disciples.”
@@ -65,15 +65,17 @@ next: SA11_58.html
 18\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p18}
 
+---
+
 ### Notes
 
-1. {:#n1} This sūtra is parallel with: [SN 22.58](https://suttacentral.net/sn22.58){:target="_blank"}, [AN 6.64](https://suttacentral.net/an6.64){:target="_blank"}, [AN 10.21](https://suttacentral.net/an10.21){:target="_blank"}, [MN 12](https://suttacentral.net/mn12){:target="_blank"}, [EA 46.4](../../ekottarika/46/EA_46_04.html){:target="_blank"}, SĀ 11.43-44, [SA 11.58](SA11_58.html){:target="_blank"}, T757, T780, T781, and T802. [\[back\]](#ref1)
+1. {:#n1} This sūtra has too many parallels that contain lists of the Tathāgata’s powers to list, but examples among early Buddhist sources include [SN 22.58](https://suttacentral.net/sn22.58){:target="_blank"}, [AN 6.64](https://suttacentral.net/an6.64){:target="_blank"}, [AN 10.21](https://suttacentral.net/an10.21){:target="_blank"}, [MN 12](https://suttacentral.net/mn12){:target="_blank"}, [EĀ 46.4](../../ekottarika/46/EA_46_04.html){:target="_blank"}, SĀ 11.43-44, [SA 11.58](SA11_58.html){:target="_blank"}, [T757](..\..\..\09_other_sutras\T757.html#p22){:target="_blank"}, [T780](..\..\..\09_other_sutras\T780.html){:target="_blank"}, [T781](..\..\..\09_other_sutras\T781.html){:target="_blank"}, and [T802](..\..\..\09_other_sutras\T802.html){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 13 June 2022
+Last Revised: 22 October 2022
 {: .revised}
 
 ---
