--- a/01_agama/samyukta/11/SA11_58.md
+++ b/01_agama/samyukta/11/SA11_58.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 11. Powers | 58. Ten Powers'
+title: 'The Related Discourses | 11. Powers | 58 (701). Ten Powers'
 type: kramdown
 base: ../../../
 previous: SA11_41.html
@@ -9,26 +9,56 @@ next: ../12/index.html
 
 # [The Related Discourses](../index.html)
 ## [11. Powers](index.html)
-### 58. Ten Powers
+### 58 (701). Ten Powers
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “There are ten kinds of the Tathāgata’s power. If these powers are accomplished, it be by the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly. What are the ten? The Tathāgata knows what’s possible and impossible as they really are. This is called his first power …” *And so on up to the end of contaminants as was recited above in SA 11.41.*
+2\. It was then that the Bhagavān addressed the monks, “There are ten kinds of the Tathāgata’s power. If these powers are accomplished, it would be by the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly. What are the ten? The Tathāgata truly knows what’s possible and impossible. This is called his first power. [If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.] [\[2\]](#n2){:#ref2}
 {:#p2}
 
-3\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
+3\. [“Furthermore, the Tathāgata truly knows that past, future, and present deeds incur their resulting events. This is called the Tathāgata’s second power. The Tathāgata, Arhat, and Completely Awakened One accomplished this power. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.]
 {:#p3}
+
+4\. [“Furthermore, the Tathāgata truly knows the liberation of dhyāna, correct attainment of samādhi, purification of defilements and bad [qualities], and dwelling in purity. This is called the Tathāgata’s third power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.]
+{:#p4}
+
+5\. [“Furthermore, the Tathāgata truly knows the various distinctions of sentient beings’ faculties. This is called the Tathāgata’s fourth power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.]
+{:#p5}
+
+6\. [“Furthermore, the Tathāgata truly knows the various mental understandings of sentient beings. This is called the Tathāgata’s fifth power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.]
+{:#p6}
+
+7\. [“Furthermore, the Tathāgata truly knows the various realms of worldly sentient beings. This is called the Tathāgata’s sixth power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.]
+{:#p7}
+
+8\. [“Furthermore, the Tathāgata truly knows all the paths and the places where they go. This is called the Tathāgata’s seventh power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.]
+{:#p8}
+
+9\. [“Furthermore, the Tathāgata remembers the events of his past lives: ‘From one birth to a hundred thousand births or from one eon to a hundred thousand eons, I was born there at that point to such a caste, such a clan, with such a name, and such food. Such were the pains and pleasures I felt, such was my life span, such was my duration, and such was the extent of my life. I died there in that place and was born here in this place. Dying there in that place and born here in this place, such were my deeds, such were the causes, and such were the ways.’ He knows all his past lives in this way. This is called the Tathāgata’s eighth power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.]
+{:#p9}
+
+10\. [“Furthermore, the Tathāgata sees sentient beings as they are born and die with his heavenly eye that transcends the human eye. When they are born, they have wonderful forms, ugly forms, lower forms, and higher forms. They head for bad destinations and head for good destinations, and they experience them according to their deeds. He truly knows: ‘This sentient being has committed bad physical deeds and committed bad verbal and mental deeds that are criticized by the noble ones. That sentient being accepts the deeds of wrong view. Because of these causes and conditions, it’ll fall to the bad destination of being born in hell when its life ends and its body breaks up.’ ‘This sentient being’s good physical deeds and good verbal and mental deeds aren’t criticized by the noble ones. That sentient being accepts the deeds of right view. Because of these causes and conditions, they’ll be born in a good destination up in heaven when their life ends and their body breaks up.’ He truly knows all of this. This is called the Tathāgata’s ninth power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.]
+{:#p10}
+
+11\. [“Furthermore, the Tathāgata has ended the contaminants. Without contaminants, his mind is liberated, and his wisdom is liberated. In the present life, he knows and has personally realized, ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know I won’t be subject to a later existence.’ This is called the Tathāgata’s tenth power. If someone accomplished this power, it would be the Tathāgata, Arhat, and Completely Awakened One. Before becoming a buddha, he attained the highest abode of knowledge. He turned the Brahma wheel and roared the lion’s roar amid his great assembly.”]
+{:#p11}
+
+12\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
+{:#p12}
+
+---
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.58](https://suttacentral.net/sn22.58){:target="_blank"}, [AN 6.64](https://suttacentral.net/an6.64){:target="_blank"}, [AN 10.21](https://suttacentral.net/an10.21){:target="_blank"}, [MN 12](https://suttacentral.net/mn12){:target="_blank"}, [EA 46.4](../../ekottarika/46/EA_46_04.html){:target="_blank"}, SĀ 11.43-44, [SA 11.41](SA11_41.html){:target="_blank"}, T757, T780, T781, and T802.. [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with numerous Buddhist sources that contain some or all of the ten powers of the Tathāgata. Some early Buddhist parallels include [SN 22.58](https://suttacentral.net/sn22.58){:target="_blank"}, [AN 6.64](https://suttacentral.net/an6.64){:target="_blank"}, [AN 10.21](https://suttacentral.net/an10.21){:target="_blank"}, [MN 12](https://suttacentral.net/mn12){:target="_blank"}, [EĀ 46.4](../../ekottarika/46/EA_46_04.html){:target="_blank"}, SĀ 11.43-44, [SA 11.41](SA11_41.html){:target="_blank"}, [T757](..\..\..\09_other_sutras\T757.html#p22){:target="_blank"}, [T780](..\..\..\09_other_sutras\T780.html){:target="_blank"}, [T781](..\..\..\09_other_sutras\T781.html){:target="_blank"}, and [T802](..\..\..\09_other_sutras\T802.html){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2} The Chinese translator abbreviated the recitation of the ten powers, referring the reader back to the full text found in [SĀ 11.41](SA11_41.html){:target="_blank"} above. I’ve expanded the abbreviation using the text from that sūtra and placed the addition in brackets. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 1 November 2020
+Last Revised: 22 October 2022
 {: .revised}
 
 ---
