--- a/01_agama/samyukta/03/SA3_1.md
+++ b/01_agama/samyukta/03/SA3_1.md
@@ -23,7 +23,7 @@ next: SA3_2.html
 4\. “So it is, monks. When being bound by the bonds is savored and nourished, it creates affection and craving. Craving is the condition for clinging. Clinging is the condition for existence. Existence is the condition for birth. Birth is the condition for old age, illness, death, grief, sorrow, pain, and trouble. Thus forms the whole mass of suffering.
 {: #p4}
 
-5\. “Suppose being bound by the bonds is followed by contemplation of impermanence, contemplation of persisting, arising, and ceasing, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment. One won’t think about it, their mind won’t be attached to it, and then craving ceases. When craving ceases, clinging ceases. When clinging ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, grief, sorrow, pain, and trouble cease. Thus ceases the whole mass of suffering.
+5\. “Suppose being bound by the bonds is followed by contemplation of impermanence, contemplation of persisting, arising, and ceasing, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment. One won’t think about [the bonds], their mind won’t be attached to them, and then craving ceases. When craving ceases, clinging ceases. When clinging ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, grief, sorrow, pain, and trouble cease. Thus ceases the whole mass of suffering.
 {: #p5}
 
 6\. “It’s like someone planting a tree. At first, it’s small, flexible, and weak. If they don’t care for and protect it, it’s not made secure. They don’t cultivate it with manure and soil, don’t water it at appropriate times, and don’t prepare it for cold and warm weather. It can’t grow larger [under those conditions].
@@ -32,26 +32,28 @@ next: SA3_2.html
 7\. “Suppose, again, they cut its roots, chop off its branches, cut it into sections, and the pieces are broken down further. The wind dries it out, and the sun bakes it. It’s burned to ash and used as fertilizer, blown away by a swift wind, or carried away by a stream of water.
 {: #p7}
 
-8\. “Monks, what do you think? Wouldn’t that tree be destroyed when its roots are cut … burned to ash and not something that will arise in the future?”
+8\. “Monks, what do you think? Wouldn’t that tree be destroyed when its roots are cut … burned to ash? Would it be something that won’t arise in the future?”
 {: #p8}
 
 They answered, “Yes, Bhagavān!”
 
-9\. “So it is, monks. Suppose being bound by the bonds is followed by contemplation of impermanence, contemplation of persisting, arising, and ceasing, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment. One won’t think about them, their mind won’t be attached to them, and then craving ceases. When craving ceases, clinging ceases. When clinging ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, grief, sorrow, pain, and trouble cease. Thus ceases the whole mass of suffering.”
+9\. “So it is, monks. Suppose being bound by the bonds is followed by contemplation of impermanence, contemplation of persisting, arising, and ceasing, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment. One won’t think about [the bonds], their mind won’t be attached to them, and then craving ceases. When craving ceases, clinging ceases. When clinging ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, grief, sorrow, pain, and trouble cease. Thus ceases the whole mass of suffering.”
 {: #p9}
 
 10\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {: #p10}
 
+---
+
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 12.57](https://suttacentral.net/sn12.57){:target="_blank"} [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with [SN 12.57](https://suttacentral.net/sn12.57){:target="_blank"}. Generally speaking, it’s very similar to SN 12.55-59, all of which use similes of trees and chains of dependent origination to illustrate the formation and cessation of suffering. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 22 April 2022
+Last Revised: 21 October 2022
 {: .revised}
 
 ---
