--- a/01_agama/samyukta/03/SA3_2.md
+++ b/01_agama/samyukta/03/SA3_2.md
@@ -11,7 +11,7 @@ next: ../04/index.html
 ## [3. Causation](index.html)
 ### 2 (284). A Great Tree
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta Grove in Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
 2\. It was then that the Bhagavān addressed the monks, “When clinging to things is savored, thought about, and fetters the mind, then one’s mind runs around chasing after name and form. Name and form are the condition for the six sense fields. The six sense fields are the condition for contact. Contact is the condition for feeling. Feeling is the condition for craving. Craving is the condition for clinging. Clinging is the condition for existence. Existence is the condition for birth. Birth is the condition for old age, illness, death, grief, sorrow, pain, and trouble. Thus forms the whole mass of suffering.
@@ -23,16 +23,16 @@ next: ../04/index.html
 4\. “So it is, monks. When clinging to things is savored, thought about, and fetters the mind, then one’s mind runs around chasing after name and form. Name and form are the condition for the six sense fields. The six sense fields are the condition for contact. Contact is the condition for feeling. Feeling is the condition for craving. Craving is the condition for clinging. Clinging is the condition for existence. Existence is the condition for birth. Birth is the condition for old age, illness, death, grief, sorrow, pain, and trouble. Thus forms the whole mass of suffering.
 {: #p4}
 
-5\. “Suppose clinging to things is followed by contemplation of impermanence, contemplation of persisting, arising, and ceasing, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment. One won’t think about them, and their mind won’t be attached to anything. One’s consciousness won’t run around chasing after name and form, and then name and form cease. When name and form cease, the six sense fields cease. When the six sense fields cease, contact ceases. When contact ceases, feeling ceases. When feeling ceases, craving ceases. When craving ceases, clinging ceases. When clinging ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, grief, sorrow, pain, and trouble cease. Thus ceases the whole mass of suffering.
+5\. “Suppose clinging to things is followed by contemplation of impermanence, contemplation of persisting, arising, and ceasing, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment. One won’t think about [clinging to things], and their mind won’t be attached to anything. One’s consciousness won’t run around chasing after name and form, and then name and form cease. When name and form cease, the six sense fields cease. When the six sense fields cease, contact ceases. When contact ceases, feeling ceases. When feeling ceases, craving ceases. When craving ceases, clinging ceases. When clinging ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, grief, sorrow, pain, and trouble cease. Thus ceases the whole mass of suffering.
 {: #p5}
 
 6\. “It’s like someone planting a tree. [At first, it’s small, flexible, and weak.] If it’s not cared for and protected in time, it’s not made secure. They don’t cultivate it with manure and soil, don’t water it at appropriate times, and don’t prepare it for cold and warm weather. It can’t grow larger [under those conditions].
 {: #p6}
 
-7\. “Suppose, again, they cut its roots, chop off its branches, cut it into sections, and the pieces are broken further. The wind dries it out, and the sun bakes it. It’s burned to ash and used as fertilizer, blown away by a swift wind, or carried away by a stream of water.
+7\. “Suppose, again, they cut its roots, chop off its branches, cut it into sections, and the pieces are broken down further. The wind dries it out, and the sun bakes it. It’s burned to ash and used as fertilizer, blown away by a swift wind, or carried away by a stream of water.
 {: #p7}
 
-8\. “Monks, what do you think? Wouldn’t that tree be destroyed when its roots are cut … burned to ash and not something that will arise in the future?”
+8\. “Monks, what do you think? Wouldn’t that tree be destroyed when its roots are cut … burned to ash? Would it be something that won’t arise in the future?”
 {: #p8}
 
 They answered, “Yes, Bhagavān!”
@@ -43,15 +43,17 @@ They answered, “Yes, Bhagavān!”
 10\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {: #p10}
 
+---
+
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 12.55](https://suttacentral.net/sn12.55){:target="_blank"}, [56](https://suttacentral.net/sn12.56){:target="_blank"}, and [58](https://suttacentral.net/sn12.58){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sūtra combines elements found in [SN 12.55](https://suttacentral.net/sn12.55){:target="_blank"}, [57](https://suttacentral.net/sn12.57){:target="_blank"}, and [58](https://suttacentral.net/sn12.58){:target="_blank"}. Generally speaking, it’s very similar to SN 12.55-59, all of which use similes of trees and chains of dependent origination to illustrate the formation and cessation of suffering. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 13 June 2022
+Last Revised: 21 October 2022
 {: .revised}
 
 ---
