--- a/01_agama/samyukta/04/SA4_55.md
+++ b/01_agama/samyukta/04/SA4_55.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 4. The Truths | 55. A Handful of Leaves'
+title: 'The Related Discourses | 4. The Truths | 55 (404). A Handful of Leaves'
 type: kramdown
 base: ../../../
 previous: SA4_1.html
@@ -9,7 +9,7 @@ next: ../05/index.html
 
 # [The Related Discourses](../index.html)
 ## [4. Truths](index.html)
-### 55. A Handful of Leaves
+### 55 (404). A Handful of Leaves
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in Magadha and traveling among the people. At Pāṭaliputra of Rājagṛha, there was a village in the middle of a bamboo forest where a great king had built a house of virtue. At the time, the Bhagavān and the great assemblies had stopped there.
 {:#p1}
@@ -17,19 +17,21 @@ next: ../05/index.html
 2\. It was then that the Bhagavān told the monks, “All of you, let’s walk together to the rosewood forest.” The Bhagavān and the great assembly went to the rosewood forest and sat down under the trees.
 {:#p2}
 
-3\. The Bhagavān took a handful of leaves and asked the monks, “Are there many leaves in this hand? Are there many leaves in this great forest?”
+3\. The Bhagavān took a handful of leaves and asked the monks, “Are there many leaves in my hand? Are there many leaves in this great forest?”
 {:#p3}
 
-[108b] The monks said to the Buddha, “Bhagavān, the leaves in your hand are few, and the leaves in this great forest are measureless. Hundreds of thousands of millions of times more. Their number can’t be likened to any analogy.”
+The monks said to the Buddha, “Bhagavān, the leaves in your hand are few, but the leaves in this great forest are measureless. Hundreds of thousands of millions of times more. Their number can’t be likened to any analogy.”
 
-4\. “So it is, monks. The things seen by me after having achieved the complete and correct awakening and that I definitely explain for people are like the leaves in my hand. Why is that? Those teachings are beneficial to the aim, beneficial to the teaching, beneficial to the religious life, to insight, wisdom, and correct awakening, and the way to Nirvāṇa.
+4\. “So it is, monks. The things seen by me after I achieved the complete and correct awakening and that I definitely explain for people are like the leaves in my hand. Why is that? Those teachings are beneficial to the aim, beneficial to the teaching, beneficial to the religious life and to insight, wisdom, correct awakening, and the way to Nirvāṇa.
 {:#p4}
 
-5\. “Like the leaves of this great forest and like my achievement of complete awakening, the correct teaching that I know but don’t teach is likewise. Why is that? Those teachings are not beneficial to the aim, not beneficial to the teaching, not beneficial to the religious life, to insight, wisdom, correct awakening, and the correct way to Nirvāṇa. Therefore, monks, those who have yet to directly realize the four noble truths should apply themselves to the method, arouse increasing motivation, and train for that direct realization.”
+5\. “The correct teaching that I know but don’t teach is like the leaves of this great forest and like my achievement of complete awakening. Why is that? Those teachings are not beneficial to the aim, not beneficial to the teaching, not beneficial to the religious life, nor to insight, wisdom, correct awakening, and the correct way to Nirvāṇa. Therefore, monks, those who have yet to directly realize the four noble truths should apply themselves to the method, arouse increasing motivation, and train for that direct realization.”
 {:#p5}
 
-6\. After the Buddha taught this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
+6\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p6}
+
+---
 
 ### Notes
 
@@ -39,7 +41,7 @@ next: ../05/index.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 December 2020
+Last Revised: 21 October 2022
 {: .revised}
 
 ---
