--- a/01_agama/samyukta/06/SA6_5.md
+++ b/01_agama/samyukta/06/SA6_5.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 6. Feeling | 5. Poison Arrows'
+title: 'The Related Discourses | 6. Feeling | 5 (470). Poison Arrows'
 type: kramdown
 base: ../../../
 previous: index.html
@@ -9,15 +9,15 @@ next: ../07/index.html
 
 # [The Related Discourses](../index.html)
 ## [6. Feeling](index.html)
-### 5. Poison Arrows
+### 5 (470). Poison Arrows
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Kalandaka’s Bamboo Park of Rājagṛha.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Kalandaka’s Bamboo Park of Rājagṛha.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “Foolish, unlearned ordinary people give rise to painful feelings, pleasant feelings, and feelings that are not painful or pleasant. Well-versed noble disciples also give rise to painful feelings, pleasant feelings, and feelings that are not painful or pleasant. Monks, what’s the difference between an ordinary person and a noble person?”
 {:#p2}
 
-3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma support. Excellent, Bhagavān! Please explain it in detail. After the monks hear this, they’ll accept and approve it.”
+3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma support! Excellent, Bhagavān! Please explain it in detail. After the monks hear this, they’ll accept and approve it.”
 {:#p3}
 
 4\. The Buddha told the monks, “For foolish, unlearned ordinary people, physical contact gives rise to feelings, and they are harassed by pains until their lives are taken. Distraught and crying, they call out and lament the injustice of it.”
@@ -29,30 +29,31 @@ next: ../07/index.html
 6\. “It’s like a man who’s been shot by a pair of poison arrows. It’s excruciating. Foolish, unlearned ordinary people are likewise. The growth of these two feelings, physical feelings and mental feelings, is excruciating. Why is that? Those foolish, unlearned ordinary people don’t understand. Contact with the five desires gives rise to pleasant feelings, and they experience the pleasure of the five desires. Because they feel the pleasure of the five desires, they become inclined to craving them.[\[2\]](#n2){:#ref2} Because of contact with painful feelings, dislike arises. Because dislike arises, they become inclined to dislike them.
 {:#p6}
 
-7\. “Regarding the accumulation, cessation, enjoyment, danger, or escape of these two types of feeling, they don’t know them as they really are. Because they don’t know them as they really are, they give rise to feelings that aren’t painful or pleasant and become inclined to delusion about them.
+7\. “They don’t truly know the formation, cessation, enjoyment, danger, or escape of these two types of feeling. Because they don’t truly know them, they give rise to feelings that aren’t painful or pleasant and become inclined to delusion about them.
 {:#p7}
 
-8\. “They are bound to pleasant feelings, painful feelings, and feelings that aren’t painful or pleasant and never escape them. What binds them? They are bound by craving, aversion, and delusion. They are bound by birth, old age, illness, death, grief, sorrow, pain, and trouble.
+8\. “They are bound to pleasant feelings, painful feelings, and feelings that aren’t painful or pleasant and never escape them. What binds them? They are bound by craving, dislike, and delusion. They are bound by birth, old age, illness, death, grief, sorrow, pain, and trouble.
 {:#p8}
 
-9\. “For well-versed noble disciples, physical contact gives rise to painful feelings, and they’re harassed by great suffering until their lives are taken, but they don’t become sorrowful and lament the injustice of it or cry aloud, and their minds aren’t maddened by it. At that point, they only have one feeling that arises, the physical feeling. The mental feeling doesn’t arise.
+9\. “For well-versed noble disciples, physical contact gives rise to painful feelings, and they’re harassed by great suffering until their lives are taken, but they don’t become sorrowful and lament the injustice of it or cry  out loud. Their minds aren’t maddened by it. At that point, they only have one feeling that arises, which is the physical feeling [of pain]. The mental feeling doesn’t arise.
 {:#p9}
 
-10\. “It’s like a man shot with one poison arrow but not two poison arrows. At that point, he only has one feeling, which is the physical feeling. He doesn’t have mental feeling. When they contact pleasant feelings, they aren’t defiled by desire and delight. Because they aren’t defiled by desire and delight, they aren’t inclined to crave those pleasant feelings. When they contact painful feelings, dislike doesn’t arise. Because dislike doesn’t arise, they aren’t inclined to dislike them. The accumulation, cessation, enjoyment, danger, and escape of those two inclinations are known as they really are. Because they are known as they really are, noble disciples aren’t inclined to delusion about feelings that aren’t painful or pleasant.
+10\. “It’s like a man shot with one poison arrow but not two poison arrows. At that point, he only has one feeling, which is the physical feeling [of pain]. He doesn’t have the mental feeling. When they come into contact with pleasant feelings, they aren’t defiled by desire and delight. Because they aren’t defiled by desire and delight, they aren’t inclined to crave those pleasant feelings. When they come into contact with painful feelings, dislike doesn’t arise. Because dislike doesn’t arise, they aren’t inclined to dislike them. They truly know the formation, cessation, enjoyment, danger, and escape of those two inclinations. Because they truly know them, noble disciples aren’t inclined to delusion about feelings that aren’t painful or pleasant.
 {:#p10}
 
 11\. “They are freed and not bound by those pleasant feelings, and they are freed and not bound by painful feelings and feelings that aren’t painful or pleasant. They aren’t bound by what? They aren’t bound by craving, dislike, and delusion, and they aren’t bound by birth, old age, illness, death, grief, sorrow, pain, and trouble.”
 {:#p11}
 
 12\. The Bhagavān then spoke in verse:
+{:#p12}
 
 * {:.verse}“It’s not that well-versed disciples\\
 Don’t feel or understand pain and pleasure,\\
-But there’s really a great gap\\
+But there really is a great chasm\\
 Between them and ordinary people.
 
-* {:.verse}Careful with pleasant feelings,\\
-Contacting pain doesn’t increase their sorrow.\\
+* {:.verse}They’re careful with pleasant feelings,\\
+And contact with pain doesn’t increase their sorrow.\\
 Detached from both pain and pleasure,\\
 They don’t follow or avoid them.
 
@@ -69,16 +70,18 @@ He abides forever in Parinirvāṇa.”
 13\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p13}
 
+---
+
 ### Notes
 
 1. {:#n1} This sūtra is parallel with [SN 36.6](https://suttacentral.net/sn36.6){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} *inclined*. The Chinese literally reads: “They become inclined by the inclination of craving.” Inclination here is a translation of Skt. anuśaya, which is usually translated as something like “underlying tendency.”[\[back\]](#ref2)
+2. {:#n2} *inclined*. The Chinese literally reads: “They become inclined to the inclination of craving.” Inclination here is likely a translation of S. *anuśaya*, which is sometimes translated as “underlying tendency.” [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 13 June 2022
+Last Revised: 22 October 2022
 {: .revised}
 
 ---
